Fix some calls to deprecated methods